--- a/scss/adminflex.scss
+++ b/scss/adminflex.scss
@@ -1,5 +1,9 @@
-$btn-width: 80px;
-$break: 1000px;
+@import 'normalize';
+
+$btn-width: 40px;
+$break-sm: 640px;
+$break-md: 1000px;
+$break-lg: 1200px;
 $main: 85%;
 $side: 15%;
 
@@ -7,6 +11,11 @@ $side: 15%;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+}
+
+td, th {
+    padding-left: 5px;
+    line-height: 25px;
 }
 
 #container {
@@ -19,7 +28,6 @@ $side: 15%;
 #content {
     width: 100%;
     margin: 0;
-    padding: 5px;
 }
 
 #content-main {
@@ -31,16 +39,19 @@ $side: 15%;
 #content-related {
     width: 100%;
     margin: 0;
-    padding: 5px;
 }
 
 .colMS {
     margin-right: 0 !important;
 }
 
+textarea {
+    width: 100%;
+}
+
 .colM {
     .aligned {
-        .vLargeTextField {
+        .vLargeTextField, .vXMLLargeTextField {
             width: 100%;
         }
     }
@@ -52,22 +63,81 @@ input[type=button],
 .submit-row input {
     min-width: $btn-width;
     min-height: 24px;
+    @media (max-width: $break-sm) {
+        width: 100%;
+        margin-top: 1em;
+        margin-left: 0;
+        margin-right: 0;
+    }
 }
+
+.selector {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    select {
+        width: 100%;
+    }
+    .selector-available {
+        flex: 1;
+    }
+    ul.selector-chooser {
+        margin-top: 2em;
+    }
+    .selector-chosen {
+        flex: 1;
+    }
+}
+
+@media (max-width: $break-md) {
+    .selector {
+        display: block;
+        width: 100%;
+        select {
+            width: 100%;
+        }
+        .selector-available {
+            width: 100%;
+        }
+        ul.selector-chooser {
+            margin-top: 0;
+            width: 100%;
+            li {
+                display: inline-block;
+                width: 50%;
+                text-align: center;
+                .selector-add {
+                    background-position: 0px -57px;
+                    &.active {
+                        background-position: 0px -83px;
+                    }
+                }
+                .selector-remove {
+                    float: right;
+                    background-position: 0px -5px;
+                    &.active {
+                        background-position: 0px -31px;
+                    }
+                }
+            }
+        }
+        .selector-chosen {
+            width: 100%;
+        }
+    }
+}
+
 
 .login {
     #container {
         max-width: 320px;
         margin-top: 0;
+        border: 0;
     }
 
     .submit-row {
         padding: 0;
         position: relative;
-        input {
-            position: absolute;
-            left: 50%;
-            margin-left: 0 - $btn-width/2;
-        }
     }
 }
 
@@ -75,7 +145,7 @@ input[type=button],
     #content {
         width: 100%;
     }
-    @media (min-width: $break) {
+    @media (min-width: $break-md) {
         #content-main {
             width: $main;
         }
@@ -114,7 +184,7 @@ input[type=button],
         }
     }
 
-    @media (min-width: $break) {
+    @media (min-width: $break-md) {
         #changelist-filter {
             width: $side;
             float: right;
