--- a/adminflex/static/css/adminflex.css
+++ b/adminflex/static/css/adminflex.css
@@ -342,7 +342,7 @@ td, th {
 #content-main {
   width: 100%;
   margin: 0;
-  padding: 5px; }
+  padding: 0 5px; }
 
 #content-related {
   width: 100%;
