fix selector input width

--- a/adminflex/static/css/adminflex.css
+++ b/adminflex/static/css/adminflex.css
@@ -388,6 +388,8 @@ textarea {
       width: 100%; }
     .selector .selector-available {
       width: 100%; }
+      .selector .selector-available input {
+        width: 100%; }
     .selector ul.selector-chooser {
       margin-top: 0;
       width: 100%; }
